görsel düzenlememler yapıldı
görsel düzenlememler yapıldı

--- a/toplu-mail-gonderim-fiyatlari.html
+++ b/toplu-mail-gonderim-fiyatlari.html
@@ -187,7 +187,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 										<h1>Fiyat</h1>
 										<p id="toplam">Ücretsiz</p>
 									</div>
-									<div class="col-sm-6">
+									<div align="right" class="col-sm-6">
 										<button type="button" class="btn btn-primary" >Satın AL</button>
 									</div>
                                 </div>
