--- a/toplu-mail-gonderim-servisi.html
+++ b/toplu-mail-gonderim-servisi.html
@@ -12,7 +12,9 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta http-equiv="Content-Language" content="tr" />
     <title>GoMail Kurumsal Toplu E-Mail Hizmeti</title>
-
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular.min.js"></script>
+	<script src="assets/js/services/validateService.js"></script> 
+	<script src="assets/js/controllers/validate.js"></script> 
     <meta name="description" content="Kurumsal E-Mail Hosting, Kurumsal E-Mail Sunucu, Cloud Mail, Toplu E-Mail, Kişiye Özel Mail, Toplu E-Mail Hizmeti ve Kurumsal E-Mail çözümlerini bu sayfada bulabilirsiniz.">
     <meta name="keywords" content="Kurumsal E-Mail Hosting, Kurumsal E-Mail Sunucu, Cloud Mail, Ücretsiz Toplu E-Mail, Ücretsiz Mail Hosting, Ücretsiz Mail Sunucu, Toplu E-Mail, E-Mail Marketing, İzinli Pazarlama, E-Mail Pazarlama, Kişiye Özel Mail, Mail Doğrulama, Transactional Mail, Bulk Mail, Zamanlanmış Mail, Raporlanmış Mail">
     <meta name="Revisit-After" content="1 Days" />
