--- a/mail-dogrulama-hizmeti.html
+++ b/mail-dogrulama-hizmeti.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
-<html lang="tr">
-<head>
+<html ng-app="ValidationMdl" lang="tr">
+<head >
   <!-- Google Tag Manager -->
   <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
   new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -12,7 +12,10 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta http-equiv="Content-Language" content="tr" />
     <title>GoMail Kurumsal Toplu E-Mail Hizmeti</title>
-
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular.min.js"></script>
+	<script src="assets/js/services/validateService.js"></script> 
+	<script src="assets/js/controllers/validate.js"></script> 
+	
     <meta name="description" content="Kurumsal E-Mail Hosting, Kurumsal E-Mail Sunucu, Cloud Mail, Toplu E-Mail, Kişiye Özel Mail, Toplu E-Mail Hizmeti ve Kurumsal E-Mail çözümlerini bu sayfada bulabilirsiniz.">
     <meta name="keywords" content="Kurumsal E-Mail Hosting, Kurumsal E-Mail Sunucu, Cloud Mail, Ücretsiz Toplu E-Mail, Ücretsiz Mail Hosting, Ücretsiz Mail Sunucu, Toplu E-Mail, E-Mail Marketing, İzinli Pazarlama, E-Mail Pazarlama, Kişiye Özel Mail, Mail Doğrulama, Transactional Mail, Bulk Mail, Zamanlanmış Mail, Raporlanmış Mail">
     <meta name="Revisit-After" content="1 Days" />
@@ -167,8 +170,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                             <canvas class="bubble b-blobs__b3" data-fill="#f8f8f8"></canvas>
                         </div>
                     </div>
-                    <div class="sayac">
-                        <span class="counter counter-analog2" data-direction="up" data-format="145" data-stop="145" data-interval="10">000</span>
+                    <div ng-controller="ValidationCtrl" class="sayac">
+                        <span class="counter counter-analog2" data-direction="up" data-format="145" data-stop="145" data-interval="10">{{ timerCount[0].Times }}</span>
                         <div class="sayac-text">
                             Sorgulanan Toplam Mail Sayısı
                         </div>
