Fiyat Sayfası ve Footer Düzenlemesi
Fiyat sayfasında içerik ve fiyat değerleri değiştirildi. Büyük harf sorunu çözüldü

--- a/giris.html
+++ b/giris.html
@@ -255,36 +255,36 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- footer -->
     <footer>
 
-        <!-- footer-links -->
-        <div class="footer-links">
-            <div class="container">
-                <div class="col col-md-3">
-                    <h6>Kurumsal</h6>
-                    <a href="kurumsal.html">Hakkımızda</a>
-                    <a href="kurumsal.html">Hizmet Politikamız</a>
-                    <a href="kurumsal.html">Anti-Spam Politikamız</a>
-                    <a href="kurumsal.html">Gizlilik Politikamız</a>
-                </div>
-                <div class="col col-md-3">
-                    <h6>Çözümlerimiz</h6>
-                    <a href="toplu-mail-gonderim-ozellikleri.html">Toplu E-Mail Gönderimi</a>
-                    <a href="toplu-mail-gonderim-ozellikleri.html">Kurumsal E-Mail Hosting</a>
-                    <a href="toplu-mail-gonderim-ozellikleri.html">Kurumsal E-Mail Sunucu</a>
-                    <a href="toplu-mail-gonderim-ozellikleri.html">Mail Doğrulama Hizmeti</a>
-                </div>
-                <div class="col col-md-3">
-                    <h6>Servislerimiz</h6>
-                    <a href="toplu-mail-gonderim-ozellikleri.html">Transactional Mail API Servisi</a>
-                    <a href="toplu-mail-gonderim-ozellikleri.html">Anlık Mail Doğrulama API Servisi</a>
-                    <a href="toplu-mail-gonderim-ozellikleri.html">Kampanya Yönetim Danışmanlığı</a>
-                    <a href="toplu-mail-gonderim-ozellikleri.html">Marka Akreditasyon Danışmanlığı</a>
-                </div>
-                <div class="col col-md-3">
-                    <h6>Sözleşmeler</h6>
-                    <a href="toplu-mail-gonderim-servisi.html">Satış Sözleşmesi</a>
-                    <a href="toplu-mail-gonderim-servisi.html">Gizlilik Sözleşmesi</a>
-                    <a href="toplu-mail-gonderim-servisi.html">Hizmet Sözleşmesi</a>
-                    <a href="toplu-mail-gonderim-servisi.html">Kullanım Koşulları</a>
+      <!-- footer-links -->
+      <div class="footer-links">
+          <div class="container">
+              <div class="col col-md-3">
+                  <h6>Kurumsal</h6>
+                  <a href="kurumsal.html">Hakkımızda</a>
+                  <a href="kurumsal.html">Hizmet Politikamız</a>
+                  <a href="kurumsal.html">Anti-Spam Politikamız</a>
+                  <a href="kurumsal.html">Gizlilik Politikamız</a>
+              </div>
+              <div class="col col-md-3">
+                  <h6>Çözümlerimiz</h6>
+                  <a href="toplu-mail-gonderim-ozellikleri.html">Toplu E-Mail Gönderimi</a>
+                  <a href="kurumsal-mail-hizmeti.html">Kurumsal E-Mail Hosting</a>
+                  <a href="kurumsal-mail-hizmeti.html">Kurumsal E-Mail Sunucu</a>
+                  <a href="mail-dogrulama-hizmeti.html">Mail Doğrulama Hizmeti</a>
+              </div>
+              <div class="col col-md-3">
+                  <h6>Servislerimiz</h6>
+                  <a href="toplu-mail-gonderim-servisi.html">Transactional Mail API Servisi</a>
+                  <a href="toplu-mail-gonderim-servisi.html">Anlık Mail Doğrulama API Servisi</a>
+                  <a href="toplu-mail-gonderim-servisi.html">Kampanya Yönetim Danışmanlığı</a>
+                  <a href="toplu-mail-gonderim-servisi.html">Marka Akreditasyon Danışmanlığı</a>
+              </div>
+              <div class="col col-md-3">
+                  <h6>Sözleşmeler</h6>
+                  <a href="#">Satış Sözleşmesi</a>
+                  <a href="#">Gizlilik Sözleşmesi</a>
+                  <a href="#">Hizmet Sözleşmesi</a>
+                  <a href="#">Kullanım Koşulları</a>
                 </div>
             </div>
         </div>
