--- a/iletisim.html
+++ b/iletisim.html
@@ -136,10 +136,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="container">
                     <div class="table-cell">
                         <div class="page-title">
-                            <h1>GoMail Kurumsal</h1>
+                            <h1>GoMail İletişim</h1>
                             <ol class="breadcrumb">
                                 <li><a style="font-weight:bold;" href="index.html">Anasayfa</a></li>
-                                <li><a style="font-weight:bold;" href="#">Kurumsal</a></li>
+                                <li><a style="font-weight:bold;" href="#">İletişim</a></li>
 
                             </ol>
                         </div>
@@ -254,23 +254,23 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="col col-md-3">
                     <h6>Çözümlerimiz</h6>
                     <a href="toplu-mail-gonderim-ozellikleri.html">Toplu E-Mail Gönderimi</a>
-                    <a href="toplu-mail-gonderim-ozellikleri.html">Kurumsal E-Mail Hosting</a>
-                    <a href="toplu-mail-gonderim-ozellikleri.html">Kurumsal E-Mail Sunucu</a>
-                    <a href="toplu-mail-gonderim-ozellikleri.html">Mail Doğrulama Hizmeti</a>
+                    <a href="kurumsal-mail-hizmeti.html">Kurumsal E-Mail Hosting</a>
+                    <a href="kurumsal-mail-hizmeti.html">Kurumsal E-Mail Sunucu</a>
+                    <a href="mail-dogrulama-hizmeti.html">Mail Doğrulama Hizmeti</a>
                 </div>
                 <div class="col col-md-3">
                     <h6>Servislerimiz</h6>
-                    <a href="toplu-mail-gonderim-ozellikleri.html">Transactional Mail API Servisi</a>
-                    <a href="toplu-mail-gonderim-ozellikleri.html">Anlık Mail Doğrulama API Servisi</a>
-                    <a href="toplu-mail-gonderim-ozellikleri.html">Kampanya Yönetim Danışmanlığı</a>
-                    <a href="toplu-mail-gonderim-ozellikleri.html">Marka Akreditasyon Danışmanlığı</a>
+                    <a href="toplu-mail-gonderim-servisi.html">Transactional Mail API Servisi</a>
+                    <a href="toplu-mail-gonderim-servisi.html">Anlık Mail Doğrulama API Servisi</a>
+                    <a href="toplu-mail-gonderim-servisi.html">Kampanya Yönetim Danışmanlığı</a>
+                    <a href="toplu-mail-gonderim-servisi.html">Marka Akreditasyon Danışmanlığı</a>
                 </div>
                 <div class="col col-md-3">
                     <h6>Sözleşmeler</h6>
-                    <a href="toplu-mail-gonderim-servisi.html">Satış Sözleşmesi</a>
-                    <a href="toplu-mail-gonderim-servisi.html">Gizlilik Sözleşmesi</a>
-                    <a href="toplu-mail-gonderim-servisi.html">Hizmet Sözleşmesi</a>
-                    <a href="toplu-mail-gonderim-servisi.html">Kullanım Koşulları</a>
+                    <a href="#">Satış Sözleşmesi</a>
+                    <a href="#">Gizlilik Sözleşmesi</a>
+                    <a href="#">Hizmet Sözleşmesi</a>
+                    <a href="#">Kullanım Koşulları</a>
                 </div>
             </div>
         </div>
