Doğrulama Fiyatları Düzenlendi
Doğrulama kısmına yeni fiyat baremleri eklendi

--- a/toplu-mail-gonderim-fiyatlari.html
+++ b/toplu-mail-gonderim-fiyatlari.html
@@ -219,9 +219,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 								</div>
 								<div id="bosAciklama3">
 
-								<div class="col-sm-4" style="text-align:left" >TOP. ADRES SAYISI3</div>
-									<div style="text-align:center" class ="col-sm-4">AYLIK GÖNDERİ SINIRI3</div>
-									<div style="text-align:right" class ="col-sm-4">BİRİM FİYAT3</div>
+								<div class="col-sm-4" style="text-align:left" >Top. Adres Sayısı</div>
+									<div style="text-align:center" class ="col-sm-4">Birim Fiyat</div>
+									<div style="text-align:right" class ="col-sm-4">Toplam Fiyat</div>
 
 								</div>
 
@@ -319,56 +319,56 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 									</div>
 
 									<div id="dogrulamaAciklama1" class="fiyat-aciklama">
-										<div class ="col-sm-4" style="text-align:left" >0 - 5000 </div>
-										<div style="text-align:center" class ="col-sm-4"> 0,0056$</div>
-										<div style="text-align:right" class ="col-sm-4">28,00$</div>
+										<div class ="col-sm-4" style="text-align:left" >0 - 1.000 </div>
+										<div style="text-align:center" class ="col-sm-4">0,0059$</div>
+										<div style="text-align:right" class ="col-sm-4">5,90$</div>
 									</div>
 									<div id="dogrulamaAciklama2" class="fiyat-aciklama">
-										<div class ="col-sm-4" style="text-align:left" >5.001 - 10.000</div>
-										<div style="text-align:center" class ="col-sm-4"> 0,0045$</div>
-										<div style="text-align:right" class ="col-sm-4">45,00$</div>
+										<div class ="col-sm-4" style="text-align:left" >1.001 - 2.500</div>
+										<div style="text-align:center" class ="col-sm-4">0,0056$</div>
+										<div style="text-align:right" class ="col-sm-4">14,00$</div>
 									</div>
 
 									<div id="dogrulamaAciklama3" class="fiyat-aciklama">
-										<div class ="col-sm-4" style="text-align:left" >10.001 - 20.000 </div>
-										<div style="text-align:center" class ="col-sm-4"> 0,0027$</div>
-										<div style="text-align:right" class ="col-sm-4">54,00$</div>
+										<div class ="col-sm-4" style="text-align:left" >2.501 - 5.000 </div>
+										<div style="text-align:center" class ="col-sm-4">0,0049$</div>
+										<div style="text-align:right" class ="col-sm-4">24,50$</div>
 									</div>
 
 									<div id="dogrulamaAciklama4" class="fiyat-aciklama">
-										<div class ="col-sm-4" style="text-align:left" >20.001 - 35.000 </div>
-										<div style="text-align:center" class ="col-sm-4"> 0,0025$</div>
-										<div style="text-align:right" class ="col-sm-4">89,00$</div>
+										<div class ="col-sm-4" style="text-align:left" >5.001 - 10.000 </div>
+										<div style="text-align:center" class ="col-sm-4">0,0042$</div>
+										<div style="text-align:right" class ="col-sm-4">42,00$</div>
 									</div>
 
 									<div id="dogrulamaAciklama5" class="fiyat-aciklama">
-										<div class ="col-sm-4" style="text-align:left" >35.001 - 50.000</div>
-										<div style="text-align:center" class ="col-sm-4"> 0,0024$</div>
-										<div style="text-align:right" class ="col-sm-4">124,00$</div>
+										<div class ="col-sm-4" style="text-align:left" >10.001 - 20.000</div>
+										<div style="text-align:center" class ="col-sm-4">0,0038$</div>
+										<div style="text-align:right" class ="col-sm-4">76,00$</div>
 									</div>
 
 									<div id="dogrulamaAciklama6" class="fiyat-aciklama">
-										<div class ="col-sm-4" style="text-align:left" >50.001 - 75.000</div>
-										<div style="text-align:center" class ="col-sm-4"> 12000</div>
-										<div style="text-align:right" class ="col-sm-4">124,00$</div>
+										<div class ="col-sm-4" style="text-align:left" >20.001 - 35.000</div>
+										<div style="text-align:center" class ="col-sm-4">0,0034$</div>
+										<div style="text-align:right" class ="col-sm-4">119,00$</div>
 									</div>
 
 									<div id="dogrulamaAciklama7" class="fiyat-aciklama">
-										<div class ="col-sm-4" style="text-align:left" >35001 - 50000 </div>
-										<div style="text-align:center" class ="col-sm-4"> 12000</div>
-										<div style="text-align:right" class ="col-sm-4">Ücretsiz</div>
+										<div class ="col-sm-4" style="text-align:left" >35.001 - 50.000 </div>
+										<div style="text-align:center" class ="col-sm-4">0,0030$</div>
+										<div style="text-align:right" class ="col-sm-4">150,00$</div>
 									</div>
 
 									<div id="dogrulamaAciklama8" class="fiyat-aciklama">
-										<div class ="col-sm-4" style="text-align:left" >50001 - 75000 </div>
-										<div style="text-align:center" class ="col-sm-4"> 12000</div>
-										<div style="text-align:right" class ="col-sm-4">Ücretsiz</div>
+										<div class ="col-sm-4" style="text-align:left" >50.001 - 75.000 </div>
+										<div style="text-align:center" class ="col-sm-4">0,0024$</div>
+										<div style="text-align:right" class ="col-sm-4">180,00$</div>
 									</div>
 
 									<div id="dogrulamaAciklama9" class="fiyat-aciklama">
-										<div class ="col-sm-4" style="text-align:left" >75001 - 100000 </div>
-										<div style="text-align:center" class ="col-sm-4"> 12000</div>
-										<div style="text-align:right" class ="col-sm-4">Ücretsiz</div>
+										<div class ="col-sm-4" style="text-align:left" >75.001 - 100.000 </div>
+										<div style="text-align:center" class ="col-sm-4">0,0022$</div>
+										<div style="text-align:right" class ="col-sm-4">220,00$</div>
 									</div>
 
 									<div id="projeAciklama" class="fiyat-aciklama"><br><br><strong>Daha Fazlası İçin Lütfen Bizimle İletişime Geçiniz</strong><br><br><br>Yüksek adetli gönderiler için daha kapsamlı bir fiyat teklifine ihtiyacınız var. Lütfen bizlerle iletişime geçerek, müşteri temsilcilerimizden projenize özel fiyat teklifi talep ediniz. Müşteri temsilcilerimiz, talebinizi inceleyerek en kısa zamanda tarafınıza dönüş yaparak projeniz için en uygun teklifi sizlerle paylaşacaktır.<br><br><br><a data-fancybox="modal" data-src="#teklifiste" class="btn btn-red" href="javascript:;">Teklif Al</a><br></div>
