Kurumsal Mail Sayfasına İçerik Eklemeleri Yapıldı
Kısa özelliklerin yer aldığı iconlar eklendi, özellikler css'ine bu sayfa için ek style eklendi.

--- a/kurumsal-mail-hizmeti.html
+++ b/kurumsal-mail-hizmeti.html
@@ -160,10 +160,74 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         </ul>
                     </nav>
                     <!-- end #page-nav-menu -->
+                    <!-- ozellikler -->
+                    <section class="ozellikler">
+                        <div class="container">
+                            <div class="mailozellik-list">
+                                <div class="row">
+                                    <div class="ozellik-list-item col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                                        <div class="ozellik-list-icon">
+                                            <img class="icon-shape" src="assets/img/anti-spam-korumasi.svg">
+                                        </div>
+                                        <div class="ozellik-list-text">
+                                            <h4>AntiSpam Koruması İle İşletmeniz Güvende</h4>
+                                            <p>AntiSpam koruması sayesinde istenmeyen veya zararlı maillerden işletmenizi koruyun, verimliliğinizi arttırın.</p>
+                                        </div>
+                                    </div>
+                                    <div class="ozellik-list-item col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                                        <div class="ozellik-list-icon">
+                                            <img class="icon-shape" src="assets/img/mail-archive.svg">
+                                        </div>
+                                        <div class="ozellik-list-text">
+                                            <h4>10GB Depolama Alanı İle 100.000'den Fazla Mail Saklayın</h4>
+                                            <p>Yüksek kapasaiteli depolama alanı ve akıllı depolama algoritması ile 10GB'lık alanda 100.000'den fazla mail barındırın.</p>
+                                        </div>
+                                    </div>
+                                    <div class="ozellik-list-item col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                                        <div class="ozellik-list-icon">
+                                            <img class="icon-shape" src="assets/img/mail-transfer.svg" alt="Toplu E-Mail Özllikleri">
+                                        </div>
+                                        <div class="ozellik-list-text">
+                                            <h4>Mail Taşıma Asistanı İle Eski Mailleriniz Ücretsiz Taşınsın</h4>
+                                            <p>Mevcut maillerinizin yeni altyapıya taşınması için endişe etmenize gerek yok otomatik mail transfer asistanı ile mailleriniz otomatik olarak taşınır.</p>
+                                        </div>
+                                    </div>
+                                    <div class="ozellik-list-item col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                                        <div class="ozellik-list-icon">
+                                            <img class="icon-shape" src="assets/img/mail-sync.svg" alt="Toplu E-Mail Özllikleri">
+                                        </div>
+                                        <div class="ozellik-list-text">
+                                            <h4>IMAP İle Tüm Cİhazlardan Maillerinize Eş Zamanlı Erişin</h4>
+                                            <p>IMAP Mail ile ister mobil ister masaüstü tüm cihazlarınızdan maillerinize ulaşın eşitleyin ve yönetin mailleriniz hep düzenli olsun.</p>
+                                        </div>
+                                    </div>
+                                    <div class="ozellik-list-item col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                                        <div class="ozellik-list-icon">
+                                            <img class="icon-shape" src="assets/img/kurumsal-mail1.svg" alt="Toplu E-Mail Özllikleri">
+                                        </div>
+                                        <div class="ozellik-list-text">
+                                            <h5>Kurumsal Mail İle Daha Profesyonel Görünün</h5>
+                                            <p>İşletmenize hak ettiği değeri verin isletmem2019@hotmail.com yerine adiniz@isletmem.com alan adıyla daha profesyonel görünün.</p>
+                                        </div>
+                                    </div>
+                                    <div class="ozellik-list-item col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                                        <div class="ozellik-list-icon">
+                                            <img class="icon-shape" src="assets/img/uyumluluk.svg" alt="Toplu E-Mail Özllikleri">
+                                        </div>
+                                        <div class="ozellik-list-text">
+                                            <h5>Tüm Cihaz, İşletim Sistemi ve Uygulamalara Uyumlu</h5>
+                                            <p>Mobil veya masaüstü tüm cihazlarda %100 uyumlu çalışır. Outlook, Apple Mail, eM Client, Thunderbird gibi uygulamalar ile kolay kurulum.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
 
+                        </div>
+                    </section>
+                    <!-- end #ozellikler -->
                     <!-- cozumler -->
                     <div id="cozumler" class="g-item">
-                        <div id="cloud" class="container">
+                        <div id="cloud-mail" class="container">
                             <div class="row">
                                 <div class="col col-md-8">
                                     <h1>Kurumsal E-Mail Hosting</h1>
