--- a/toplu-mail-gonderim-fiyatlari.html
+++ b/toplu-mail-gonderim-fiyatlari.html
@@ -371,7 +371,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 										<div style="text-align:right" class ="col-sm-4">220,00$</div>
 									</div>
 
-									<div id="projeAciklama" class="fiyat-aciklama"><br><br><strong>Daha Fazlası İçin Lütfen Bizimle İletişime Geçiniz</strong><br><br><br>Yüksek adetli gönderiler için daha kapsamlı bir fiyat teklifine ihtiyacınız var. Lütfen bizlerle iletişime geçerek, müşteri temsilcilerimizden projenize özel fiyat teklifi talep ediniz. Müşteri temsilcilerimiz, talebinizi inceleyerek en kısa zamanda tarafınıza dönüş yaparak projeniz için en uygun teklifi sizlerle paylaşacaktır.<br><br><br><a data-fancybox="modal" data-src="#teklifiste" class="btn btn-red" href="javascript:;">Teklif Al</a><br></div>
+									<div id="projeAciklama" class="fiyat-aciklama"><br><br><strong>Daha Fazlası İçin Lütfen Bizimle İletişime Geçiniz</strong><br><br><br>Yüksek adetli gönderi veya doğrulama işlemleri için daha kapsamlı bir fiyat teklifine ihtiyacınız var. Lütfen bizlerle iletişime geçerek, müşteri temsilcilerimizden projenize özel fiyat teklifi talep ediniz. Müşteri temsilcilerimiz, talebinizi inceleyerek en kısa zamanda tarafınıza dönüş yaparak projeniz için en uygun teklifi sizlerle paylaşacaktır.<br><br><br><a data-fancybox="modal" data-src="#teklifiste" class="btn btn-red" href="javascript:;">Teklif Al</a><br></div>
 
 								<div id="entegrasyonAciklama" class="fiyat-aciklama">Entegrasyon Açıklama</div>
 								<div id="proAciklama" class="fiyat-aciklama">Pro Açıklama</div>
