kurumsal mail sayfasına sss eklendi
sss içerikleri girildi

--- a/kurumsal-mail-hizmeti.html
+++ b/kurumsal-mail-hizmeti.html
@@ -402,27 +402,63 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
                     <!-- item -->
                     <div class="yardimItem">
-                        <h1>İade garantisi hangi ürün ve hizmetleri kapsar?</h1>
-                        <p>GoMail'in lisans içermeyen ürün ve hizmetlerini memnun kalmadığınız takdirde 15 gün içerisinde hizmet sözleşmesinde yer alan koşullara uygun olarak yerine getirmeniz ve talep etmeniz durumunda ücret iadesi doğrudan yapılır.</p>
-                        <ul class="maddeler">
-                            <li>Önce bir GoMail hesabı açmalısınız. <a href="#">Ücretsiz Hesap Açın.</a></li>
-                            <li>Hesabınıza giriş yapın ve <strong>lorem</strong> sayfasından <strong>Başvuru</strong> yap seçeneğine tıklayın.</li>
-                            <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos, maiores.</li>
-                        </ul>
+                        <h1>GoMail Kurumsal Bulut Mail Nedir?</h1>
+                        <p>Hiç kuşkusuz günümüzün en önemli iletişim araçlarından biri de emaildir. İş yaşantısında bilgilendirme,
+                          iş atama ve buna benzer günlük yazışmaların haricinde sipariş, sözleşme, fiyat teklifi gibi yüksek öneme
+                          sahip yazışmalarda email üzerinden yapılmaktadır. Böylesine önemli bir iletişim aracının işletme beklentilerini
+                          bütünüyle karşılaması, güvenilir ve kesintisiz olması gerekmektedir. GoMail Kurumsal Bulut Mail işletmelerin ihtiyaçlarını
+                          bütünüyle ve bir arada karşılayacak bir hizmet vermektedir.</p>
+                          <p>Outlook, Apple Mail, Thunderbird gibi farklı email uygulamalarını
+                          kullanarak email gönderip alabilir ve emaillerinizi saklayabilirsiniz. Hatta ofis dışında veya seyahatteyken bile kullandığınız
+                          mobil cihaz üzerinden emaillerinize kolayca ulaşabilir ve yanıtlayabilirsiniz. GoMail Kurumsal Bulut Mail Servisi tüm platformlar
+                          ile %100 uyumlu ve sorunsuz bir şekilde çalışmakatadır.</p>
+                          <p>Müşterilerimize sunduğumuz %99,9'luk kesintisiz erişilebilirlik, güçlü SSL, AntiSpam ve Virüs koruması sayesinde emaillerinizin
+                            güvenli olduğundan emin olarak verimliliğinizi arttırmaya odaklanabilirsiniz.</p>
                     </div>
 
                     <!-- item -->
                     <div class="yardimItem">
-                        <h1>Satın aldığım ürün ve hizmetlerle ilgili teknik destek hizmeti hangi kanallar üzerinden verilmektedir?</h1>
-                        <p>GoMail, müşterilerine satın alma öncesinde olduğu gibi satın alma sonrasında da aynı hassasiyet ve titizlikle destek vermektedir. Müşterilerimiz destek taleplerini sistem üzerinden ticket veya özel müşteri temsilcilerine telefon yoluyla ulaşarak iletebilirler. Telefonla yapılan taleplerde de talebin kayıt altına alınması, müşteri memnuniyeti ve çalışan performansının ölçümlenmesi için oldukça öneli olduğundan müşterinin ayrıca ticket açması istenecektir.</p>
+                        <h1>Ücretli Bir Email Hesabına Sahip Olmanın Avantajları Nelerdir?</h1>
+                        <p>Her işletme gibi sizde verilerinizi güvende tutarken işletme giderlerinizi de mümkün olduğunda kontrol altında tutmak istersiniz.
+                          Birçok işletme email hizmeti için alternatif ve ücretsiz kaynaklardan faydalanıyor. Global ölçekli mail operatörleri kişisel
+                          emaillerimiz için kuşkusuz en doğru adres ancak işletmemiz için oldukça önemli olan email hizmeti topluluk hesaplarının tabi olduğu
+                          genel kurallarla çalışmakta zorlanabilir.</p>
+                          <P>Paylaşımlı ve topluluk kurallarına tabi bu ücretsiz servisler işletmelerinize özel kuralların
+                          tanımlanmasını imkansız kılarken ihtiyaç duyduğunuzda destek almanız için bir süre beklemenizi gerektirebilir. Oysa ki işletinizin birkaç
+                          saat veya birkaç gün durması sizler için ciddi ekonomik kayıplara neden olabilir. Ücretli servislerin işletmenize sağladığı faydalar aşağıda sıralanmıştır.</p>
+                          <ul class="maddeler">
+                            <li>isminiz@sirketadi.com gibi kurumsal kimliğinizi temsil eden bir email adresi, web siteniz ve şirketiniz için kulaktan kulağa reklam görevi görür.
+                              Gönderdiğiniz her bir email ile alıcıları web sitenizi ziyaret etmeye yönlendirirsiniz. Böylece bilindik ücretsiz mail servislerinden (Gmail, Hotmail vb.)
+                              daha profesyonel görünen işletmenizin alan adını kullanarak işinize yatırım yaptığınızı ve önemsediğinizi muhataplarınıza göstermeniz kolaylaşacaktır.</li>
+                              <li>Ücretsiz servislerin aksine kurumsal mail hizmetleri reklam içermez ve kişisel verilerinizi herhangi bir nedenle üçüncü kişi veya kuruluşlarla paylaşmaz,
+                                verilerinizi satış ve pazarlama analitiği olarak kullanarak size kişiye özel reklamlar göndermez.</li>
+                              <li>Verilerinizin kaybolmayacağını garanti eder. Yakın zamanda oldukça bilindik bir mail operatörü kullanıcı bilgilerinin siber saldırganlar tarafından ele
+                                geçirildiğini duyurmuş ve bununla ilgili yapabilecek herhangi birşeyleri olmadığını duyurmuştu. Zaten ücretsiz olan bir servisin zarar temin etmesi
+                                beklenemeyeceği gibi verilerinizin güvenliğine ilişkin herhangi bir taahhütleri de yoktur. Ücretli sservislerde satış ve hizmet sözleşmeleriyle kullanım haklarınız kayıt altına alınır.</li>
+                              <li>Hizmet aldığınız şirketten yerinde ve yerel destek alabilirsiniz. Sorunlarınız daha hızlı ve kolay çözülür.
+                              <li>Topluluk kurallarının haricinde işletmenize özel kurallar tanımlayabilir güvenilen gönderici listesi (whitelist) veya güvenilmeyen emailler (blacklist)
+                                için özel tanımlamalar yapabilirsiniz. Ayrıca isminize vaya işletmenizde bulunan departmanlara özel isimlendirme yapabilir, gruplar oluşturabilir, gelen bir mail ile ilgili olarak dağıtım listeleri oluşturabilirsiniz.</li>
+                          </ul>
                     </div>
-
                     <!-- item -->
                     <div class="yardimItem">
-                        <h1>GoMail verilerimizi nerede ve nasıl saklamaktadır?</h1>
-                        <p>Bilgi güvenliği ve müşteri gizliliği bizlerin en temel ve veazgeçilmez standartlarımızdandır. GoMail %100 Türk sermayeli bir şirket markası olup, alt yapısının oluşturan sunucuları Türkiye'de Radore Veri Merkezi Hizmetleri A.Ş.'ye ait datacenter'da tutulmaktadır. Hiçbir veriniz mahkeme kararı olmaksızın üçüncü kişiler ile paylaşılmaz ve ne amaçla olursa olsun yurt dışında bulunan başka bir sunucuaktarılmaz veya bu sunucularda saklanmaz.</p>
+                        <h1>Gönderdiğim Maillerin Spam/Önemsiz Kutusuna Düşmesini Engelleyebilir miyim?</h1>
+                        <p>Her e-mail servis sağlayıcısı global güvenlik çözümlerini kullanmakla birlikte kendine has güvenlik protokollerini de gelen tüm mailler üzerinde uygular. Global kurallar çerçevesinde göndericinin güvenilirliğinin ispatı olan bir
+                          takım akreditasyon çalışmalarını tamamlamak alıcı nezdinde gönderilerinizin itibarını arttıracak ve sizin güvenlik filtrelerinden daha kolay geçmenize yardımcı olacaktır.</p>
+                          <p>SPF, DKIM, DMARC ve PTR (REVERSE DNS) gibi kimliklendirme çalışmaları
+                        alıcılar nezdindeki spam skorlarını pozitif anlamda etkileyen akreditasyon işlemlerini barındırır. GoMail söz konusu çalışmaları kolayca gerçekleştirmeniz için değerli müşterilerine profesyonel destek verir. Hiçbir çözüm %100 inbox garantisi
+                        veremeyeceği gibi bu tip garanti verdiğini iddia eden çözümler gerçeklikten uzak ve aldatıcı sloganlardan ibaret söylemlerdir. Böyle bir garanti herşeyden evvel teknik olarak mümkün değildir.</p>
                     </div>
-
+                    <!-- item -->
+                    <div class="yardimItem">
+                        <h1>Web Sitemiz Başka Bir Sağlayıcıda Barındırılıyor. Email Hizmetini Sizden Temin Edebilir miyim?</h1>
+                        <p>Tabi ki! Web siteniz bir başka sağlayıcıda barındırılıyor olabilir, email hizmeti barındırma hizmetinden bağımsız bir servis olduğundan GoMail Kurumsal Mail Hizmetinden faydalanarak maillerinizi GoMail servislerinde barındırabilirsiniz.</p>
+                    </div>
+                    <!-- item -->
+                    <div class="yardimItem">
+                        <h1>Hangi E-Mail Uygulamalarını Kullanabilirim?</h1>
+                        <p>GoMail Kurumsal Mail Servisi platform ve uygulamadan bağımsız olarak çalışır. İster cep telefonu ister masaüstü bilgisayarınızda dilediğiniz E-Mail uygulamasını kullanabilirsiniz. Outlook, Apple Mail, Thunderbird, BlueMail vb. uygulamaları kullanabilirsiniz.</p>
+                    </div>
 
 
                 </div>
