ücretsiz olmasıyla ilgili bug çözüldü text input turkçeleştirildi
ücretsiz olmasıyla ilgili bug çözüldü text input turkçeleştirildi

--- a/mail-dogrulama-hizmeti.html
+++ b/mail-dogrulama-hizmeti.html
@@ -6,7 +6,11 @@
   new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
   j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-  })(window,document,'script','dataLayer','GTM-TBZR3WZ');</script>
+  })(window,document,'script','dataLayer','GTM-TBZR3WZ');
+  
+
+  
+  </script>
   <!-- End Google Tag Manager -->
 
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -27,6 +31,7 @@
 
     <link href="assets/css/main.css" rel="stylesheet" />
     <link href="assets/css/style.css" rel="stylesheet" />
+	<link href="assets/css/flapper.css" rel="stylesheet" />
     <link href="assets/css/media.css" rel="stylesheet" type="text/css" media="all" />
 
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i&amp;subset=latin-ext" rel="stylesheet">
@@ -36,6 +41,7 @@
     <link rel="stylesheet" href="assets/css/owl.theme.default.min.css">
 
     <script src="assets/js/jquery-1.9.1.min.js"></script>
+	<script src="assets/js/jquery.flapper.js"></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/TweenMax.min.js'></script>
 
     <!--[if lte IE 7]>
@@ -67,6 +73,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         accurateTrackBounce:true,
         webvisor:true
    });
+   
 </script>
 <noscript><div><img src="https://mc.yandex.ru/watch/51093581" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 <!-- /Yandex.Metrika counter -->
@@ -173,14 +180,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <div  class="sayac">
                         <span class="counter counter-analog2" data-direction="up" data-format="145" data-stop="145" data-interval="10">{{ timerCount[0].Times }}</span>
                         <div class="sayac-text">
-                            Sorgulanan Toplam Mail Sayısı
+                            Günlük Sorgulanan Toplam Mail Sayısı
                         </div>
                     </div>
                     <!-- dogrulama-form -->
                     <div id="dogrulama-form">
                         <form class="form-inline">
 
-							<input class="arama" type="text" class="form-control input-lg text-center" placeholder="email to check" ng-model="formData.text">
+							<input class="arama" type="text" class="form-control input-lg text-center" placeholder="doğrulanacak email" ng-model="formData.text">
 							<button type="submit" class=" getir btn btn-primary btn-lg" ng-click="validate(formData.text)">Doğrula</button>
 
                         </form>
@@ -433,6 +440,16 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/paper.js/0.11.4/paper-full.min.js"></script>
     <script src="assets/js/text.js"></script>
     <script src="assets/js/blob.js"></script>
+	
+	<script>
+	
+
+
+
+
+
+	
+	</script>
 
 </body>
 
